# lock-free-event-bus

./: CMakeLists.txt  README.md  main.cpp
benchmark/results/: latency-benchmark.txt
benchmarks/results/: partition_scaling_benchmark.txt
examples/: basic_usage_demo.cpp  latency_benchmark_demo.cpp  partition_scaling_demo.cpp
includes/: back_pressure_strategy.hpp  consumer.hpp  consumer_group.hpp  event.hpp  event_bus.hpp  lock_free_mpsc_queue.hpp  lock_free_spsc_queue.hpp  publisher.hpp  subscriber.hpp  topic.hpp
lib/core/: event.hpp  lock_free_mpsc_queue.hpp
lib/eventbus/: back_pressure_strategy.hpp  consumer.hpp  consumer_group.hpp  event_bus.hpp  event_bus_config.hpp  topic.hpp
lib/eventbus/src/: consumer.cpp  consumer_group.cpp
src/: consumer.cpp  consumer_group.cpp
